fix: add overflow hidden to footer

--- a/museum/styles.css
+++ b/museum/styles.css
@@ -793,6 +793,7 @@ input {
 
 footer {
   padding-top: 85px;
+  overflow: hidden;
 }
 
 
